Rename TranscriptDeserializer to TranscriptSerialization.